# nodeide

./: .gitignore  CMakeLists.txt  README.md  knodeide.pro  mainwindow.cpp  mainwindow.h  nodeide.pro  resources.qrc
cmake/: FindQScintilla.cmake
src/: main.cpp  mainwindow.cpp  mainwindow.h  mimetypehelper.h
src/highlighter/: JSLexer.cpp  JSLexer.h
src/widgets/: ProjectExplorer.h  QuickFileOpenWidget.cpp  QuickFileOpenWidget.cpp.autosave  QuickFileOpenWidget.h  codeeditor.cpp  codeeditor.h  directorytreewidgetitem.cpp  directorytreewidgetitem.h  npmstatusbar.cpp  npmstatusbar.h  projectexplorer.cpp  projectexplorer.h  runconfigurationswidget.cpp  runconfigurationswidget.h
src/widgets/lists/: FileTreeWidgetItem.h  QuickSearchItem.cpp
